roles/kubernetes/files/argocd/ingressroute.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
spec:
  entryPoints:
    - web
  routes:
    - kind: Rule
      match: PathPrefix(`/argocd`)
      priority: 10
      services:
        - name: argocd-server
          port: 80
    - kind: Rule
      match: PathPrefix(`/argocd`) && Header(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: 80
          scheme: h2c
